fix: Remove font stretch

--- a/th-ws/src/css/custom.css
+++ b/th-ws/src/css/custom.css
@@ -10,7 +10,6 @@
     url('/static/fonts/Inter-Regular.woff2') format('woff2 supports variations'),
     url('/static/fonts/Inter-Regular.woff2') format('woff2-variations');
   font-weight: 200 900;
-  font-stretch: 75% 125%;
 }
 
 @font-face {
@@ -19,7 +18,6 @@
     url('/static/fonts/Inter-Bold.woff2') format('woff2 supports variations'),
     url('/static/fonts/Inter-Bold.woff2') format('woff2-variations');
   font-weight: 200 900;
-  font-stretch: 75% 125%;
 }
 
 /* You can override the default Infima variables here. */
@@ -155,7 +153,6 @@ html {
 h1,
 h2 {
   font-family: 'Inter Regular';
-  font-stretch: semi-condensed;
   text-shadow: 1px 1px 2px #000, 0 0 0.05em #fff, 0 0 0.005em #fff;
 }
 
@@ -164,6 +161,5 @@ h4,
 h5,
 h6 {
   font-family: 'Inter Regular';
-  font-stretch: semi-condensed;
   text-shadow: 1px 1px 2px #000, 0 0 0.05em #fff, 0 0 0.005em #fff;
 }
